--- a/projects/student_intervention/student_intervention_first try/student_intervention.ipynb
+++ b/projects/student_intervention/student_intervention_first try/student_intervention.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -335,37 +335,15 @@
     "**Answer: **\n",
     "I think the following three models would be appropriate.\n",
     "\n",
-    "##### **Random forrest (RF)**\n",
-    "- A random forrest is an ensamble method for classification, regression and other tasks. that fits n decision tree classifiers on a number of sub-samples of the dataset. The random forrest differ from standard tree classifiers by using a modified tree algorithm, that selects at each candidate split in the learning process a random subset of the features. It uses averaging to improve the predicive accuracy and control overfitting. Each trees are trained on various sub-samples of the whole training set, of the original input samples, drawn with replacement. Decision trees are grown very deep resulting in a low bias and high variance. By averaging the random trees trained of different part of the same dataset the goal is to reduce the variance. However this comes on the expense of a small increase in bias and loss of interpretability.\n",
+    "Random forrest\n",
+    "A random forrest is an ensamble method for classification, regression and other tasks. that fits n decision tree classifiers on a number of sub-samples of the dataset. The random forrest differ from standard tree classifiers by using a modified tree algorithm, that selects at each candidate split in the learning process a random subset of the features. It uses averaging to improve the predicive accuracy and control overfitting. Each trees are trained on various sub-samples of the whole training set, of the original input samples, drawn with replacement. Decision trees are grown very deep resulting in a low bias and high variance. By averaging the random trees trained of different part of the same dataset the goal is to reduce the variance. However this comes on the expense of a small increase in bias and loss of interpretability.\n",
     "\n",
-    "- RF's can be seen used in areas crossing many scientific diciplines, ranging from classifying sattelite imagery to cell biology and even predicting student performance!\n",
-    "- I chose RF becuause it is mentioned as one of the algorithms that comes closest to an off-the-shelf solution for datamining. Also it can model very complex data given that it uses a forrest of random decision trees not just one decision tree. With 48 features i think that RF would fit since it can model data with high dimensionality by creating deep trees that have high variance but migitate this by using it tricks with how it samples the data and create the random trees.    \n",
+    "k-nearest neighbors algorithm - This is a relatively simple model that can be used for both regression and classification. For classification an object is classified based on majority vote of the k nearest objects based on their class, where k is an integer. Also it is possible to assign weight based on how close the object is. E.g 1/d wher d is the distance. The model is easy to understand and it is straight forward to evaluate the classifications of the model. However the model has short comings if there are local structures in the data that cannot be captured.\n",
     "\n",
-    "###### RF in the litterature\n",
-    "[Geography land cover](http://www.tandfonline.com/doi/abs/10.1080/01431160412331269698)\n",
-    "[Biology](http://nar.oxfordjournals.org/content/35/suppl_2/W339.short)\n",
-    "[Predicting student performance](http://www.sciencedirect.com/science/article/pii/S0950705110000456)\n",
     "\n",
-    "##### k-nearest neighbors algorithm \n",
-    "- This is a relatively simple model that can be used for both regression and classification. For classification an object is classified based on majority vote of the k nearest objects based on their class, where k is an integer. Also it is possible to assign weight based on how close the object is. E.g 1/d wher d is the distance. The model is easy to understand and it is straight forward to evaluate the classifications of the model. However the model has short comings if there are local structures in the data that cannot be captured.\n",
+    "Decision Trees - This classifier uses a decision tree to map observations about objects to draw conclusion. It consists of leafs and branches. Where each leaf represents a decision on a feature variable and branches out to new leafs, ending up in the end on a decision predicting the target variable. The model is particularly good for mining and for visualisation, as the tree is more easily understood compared to a black box algorithm. However a decision tree is prone to overfitting as the tree can grow too large if not pruned to avoid overfitting. Also at each decision is prone to fall into local minima as the decisions are made locally for each leaf. There are also consepts that decision trees have problems with representing without becoming overly complex, or not at all, such as the XOR function.\n",
     "\n",
-    "- k-nearest neighboors algoritm has seen application within image classification and feature extraction. \n",
-    "- I chose this algorithm because based on my domain knowledge I expect similar students to get similar results, also the model is straight forward to intepret. Meaning that the results of the model could easily be used to identify what elements students share that have issues with graduating, and can be used to create actionable plans for the educational system if the algorithm is used in production.\n",
-    "\n",
-    "######  k-nearest neighbors algorithm  in the litterature\n",
-    "Mills, Peter. \"Efficient statistical classification of satellite measurements\". International Journal of Remote Sensing\n",
-    "\n",
-    "##### Decision Trees \n",
-    "- This classifier uses a decision tree to map observations about objects to draw conclusion. It consists of leafs and branches. Where each leaf represents a decision on a feature variable and branches out to new leafs, ending up in the end on a decision predicting the target variable. The model is particularly good for mining and for visualisation, as the tree is more easily understood compared to a black box algorithm. However a decision tree is prone to overfitting as the tree can grow too large if not pruned to avoid overfitting. Also at each decision is prone to fall into local minima as the decisions are made locally for each leaf. There are also consepts that decision trees have problems with representing without becoming overly complex, or not at all, such as the XOR function.\n",
-    "\n",
-    "- Decision trees is maybe one of the machine learning algorithms that is easiest to understand from a lay mans perspective. This lends it self for use in business where it is essential to understand how the algorithm models the data. E.g Harward Business Review made an article on using decision trees for decision making. This makes sense for an excecutive that wants to make a good decision but also needs to explain the decision to stake holders to get approval.\n",
-    "\n",
-    "- I chose this algorihm because i think it is possible to split the students into groups, which the decision tree could model. Also that it would also be a good tool for teachers to understand what features that makes a student more likely to not graduate.\n",
-    "\n",
-    "######  Decision Trees  in the litterature\n",
-    "https://hbr.org/1964/07/decision-trees-for-decision-making\n",
-    "\n",
-    "Sources also used:\n",
+    "Sources:\n",
     "https://en.wikipedia.org/wiki/Random_forest\n",
     "http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html3\n",
     "https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm\n",
@@ -387,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -450,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -461,31 +439,31 @@
      "text": [
       "--------------------\n",
       "Training a RandomForestClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0700 seconds\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7313.\n",
-      "\n",
-      "\n",
-      "Training a RandomForestClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0430 seconds\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "F1 score for training set: 0.9964.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.8058.\n",
-      "\n",
-      "\n",
-      "Training a RandomForestClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0460 seconds\n",
       "Made predictions in 0.0020 seconds.\n",
       "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7714.\n",
+      "\n",
+      "\n",
+      "Training a RandomForestClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0540 seconds\n",
       "Made predictions in 0.0020 seconds.\n",
-      "F1 score for test set: 0.7737.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7626.\n",
+      "\n",
+      "\n",
+      "Training a RandomForestClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0450 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for test set: 0.7857.\n",
       "--------------------\n",
       "--------------------\n",
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0020 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.8060.\n",
       "Made predictions in 0.0010 seconds.\n",
@@ -501,7 +479,7 @@
       "\n",
       "\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0000 seconds\n",
       "Made predictions in 0.0050 seconds.\n",
       "F1 score for training set: 0.8809.\n",
       "Made predictions in 0.0020 seconds.\n",
@@ -509,7 +487,7 @@
       "--------------------\n",
       "--------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0000 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
@@ -517,7 +495,7 @@
       "\n",
       "\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0000 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
@@ -525,7 +503,7 @@
       "\n",
       "\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0000 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
@@ -740,7 +718,7 @@
     "\n",
     "So I ask my friend Steve if I will like the movie. In order for Steve to know this I need to tell him some of the movies I like and dont like. Then when I ask him if I will like a given movie, he will do 20 questions based on the knowledge he gained from what I told him. E.g \"Is X a romantic movie?\", \"Does Johnny Depp star in the movie?\" an so on. He asks informative questions first the gives me a yes or no question at the end. By doing this Steve has created a decision tree for my movie preferences. But Steve is only human and does not generalize my taste and preferences well. (He overfits). In order to get more accurate recomendations I ask a group of my friends if I will like the movie in the same way, i.e making them vote. Now my friends are decision trees will make up the forrest. But I dont want all my friends to think the same way about my preferences.\n",
     "\n",
-    "Since I dont want the same answer from all my friends I give them slightly different data. In addition I will make my friends have to choose a random attribute to split on, i.e not all my friends can ask if Leonardo Di Caprio is in the movie, just because I told them I liked Titanic and Inception. Now my friends are asking different questions at different times. My friends now form a random forrest. I can now ask all of them if I should see a given movie. They will all ask some questions regarding the movie. And based on what they find they will each vote yes or no. I do the average of the votes and the result of the voting determines if I should see the movie or not.\n",
+    "Since I dont want the same answer from all my friends I give them slightly different data. In addition I will make my friends have to choose a random attribute to split on, i.e not all my friends can ask if Leonardo Di Caprio is in the movie, just because I told them I liked Titanic and Inception. Now my friends are asking different questions at different times. My friends now form a random forrest.\n",
     "\n",
     "Inspired by source:https://www.quora.com/How-does-randomization-in-a-random-forest-work\n"
    ]
@@ -763,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -772,10 +750,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0060 seconds.\n",
-      "Tuned model has a training F1 score of 0.8761.\n",
-      "Made predictions in 0.0120 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7785.\n"
+      "Made predictions in 0.0730 seconds.\n",
+      "Tuned model has a training F1 score of 1.0000.\n",
+      "Made predictions in 0.0720 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7891.\n"
      ]
     }
    ],
@@ -785,7 +763,7 @@
     "from sklearn.metrics import f1_score, make_scorer\n",
     "from sklearn.grid_search import GridSearchCV\n",
     "# TODO: Create the parameters list you wish to tune\n",
-    "parameters = {'n_estimators':[10,30,60,100,300,1000],'max_depth':[None,5,10,100], 'max_features':['auto','sqrt']}# ,'min_samples_split':[2,5,10],'max_depth':[None,5,10,100]   }\n",
+    "parameters = {'n_estimators':[10,30,60,100,300,1000],'max_features':['auto','sqrt','log2']}#,'min_samples_split':[2,5,10],'max_depth':[None,5,10,100]   }\n",
     "\n",
     "# TODO: Initialize the classifier\n",
     "clf = RandomForestClassifier()\n",
@@ -794,7 +772,7 @@
     "f1_scorer = make_scorer(f1_score, pos_label='yes')\n",
     "\n",
     "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
-    "grid_obj = GridSearchCV(clf, parameters,f1_scorer)\n",
+    "grid_obj = GridSearchCV(clf, parameters)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
     "grid_obj = grid_obj.fit(X_train,y_train)\n",
@@ -821,7 +799,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "The tuned model has an F1 score of 0.7785 which only is higher than the F1 score for the untuned model of 100 samples, also the untuned model has a higher score at 200 samples (F1=0.7941) than for 300 samples (F1=0.7914). The untuned model is a subset of the parameters in the grid search, which we then expect to give the same F1 score as previously. However since the forrest is random this is not always the case that we get the same forrest each time, which results in different F1 scores. In this case we get a range of scores that overlap when we retrain even for higher sample sizes and different parameters. This means most likely that higher model complexity does not result in a higher score. Which is expected from a bias variance tradeoff. Where the error from variances increases for higher model complexity. What likely happens is that the variance increases and that the increase in n_estimators does not capture any more information from the data. It could be that the model overfits the data, which is why I chose to include max_depth,max_features and n_estimators as a parameter to tune."
+    "The tunes model has an F1 score of 0.7891 which is higher than the F1 score for the untuned model, however the untuned model has a higher score at 200 samples (F1=0.7941) than for 300 samples (F1=0.7914). Also the untuned model is a subset of the parameters in the grid search, which we then expect to give the same F1 score as previously. However since the forrest is random this is not always the case that we get the same forrest each time, which results in different F1 scores. In this case we get a range of scores that overlap when we retrain even for higher sample sizes and different parameters. This means most likely that higher model complexity does not result in a higher score. Which is expected from a bias variance tradeoff. Where the error from variances increases for higher model complexity. What likely happens is that the variance increases and that the increase in n_estimators does not capture any more information from the data."
    ]
   },
   {
