--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -300,11 +300,11 @@
     "\n",
     "**Light**: green or red\n",
     "\n",
-    "**Oncoming**: left, right, forward.\n",
+    "**Oncoming**: left, right, forward, None\n",
     "\n",
     "**Direction**: forward/left/right\n",
     "\n",
-    "State space=2x3x3=18\n",
+    "State space=2x4x3=24\n",
     "\n",
     "It should be possible to learn a policy for each state in a reasonable number of trials as the action space is.\n",
     "\n",
@@ -563,6 +563,8 @@
    "source": [
     "**Answer:** \n",
     "\n",
+    "**Optimal policy**\n",
+    "\n",
     "By going through the states in the Q table i found some states that might be different from an expected optimal policy.\n",
     "\n",
     "Example state:\n",
@@ -578,7 +580,24 @@
     "\n",
     "-- left : 0.00\n",
     " \n",
-    " Here the light is red. Turn right on red is legal, thereby having a positive reward. Since the direction is left the action with highest Q value is None, which seems correct considering turning right would mean driving in the opposite direction of the target waypoint."
+    " Here the light is red. Turn right on red is legal, thereby having a positive reward. Since the direction is left the action with highest Q value is None, which seems correct considering turning right would mean driving in the opposite direction of the target waypoint.\n",
+    " \n",
+    "**Suboptimal policy**\n",
+    "An example of a suboptimal policy would by the following \n",
+    "\n",
+    "('red', 'left', 'left')\n",
+    "\n",
+    " -- forward : 1.75\n",
+    "\n",
+    "-- right : -0.45\n",
+    "\n",
+    "-- None : -0.77\n",
+    "\n",
+    "-- left : 0.00\n",
+    "\n",
+    "Where the highest Q value is forward. This is suboptimal because the light is red and this is a violation of a traffic rule. In addition this would cause an accident because there is a car oncoming from the left.\n",
+    "\n",
+    "However this suboptimal policy is just an example as no suboptimal policies were found after a quick review for the A+ smartcab.\n"
    ]
   },
   {
